--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-public/uploads/698f22fb0f2e9.jpg
-public/uploads/698f24e3d45ad.jpg
-.claude
+# Uploads
+public/uploads/
+
+# Configuration Claude Code
+.claude/
