ajout de l'analyse de l'ia pour la gestion des erreurs plus init des logs et préparation du gitignore pour les logs

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ public/uploads/
 .env
 .env.local
 .env.*.php
+
+# Logs
+/logs/*.log
+/logs/*.log.gz
+/logs/*/*.log
+/logs/*/*.log.gz
+/logs/.rotation
